--- a/package.json
+++ b/package.json
@@ -20,11 +20,16 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@fortawesome/angular-fontawesome": "^0.12.1",
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "~1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@ngx-translate/core": "^14.0.0",
     "@ngx-translate/http-loader": "^7.0.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^5.3.1",
     "fabric": "^4.5.0",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.7.0",
     "ngx-owl-carousel": "^2.0.7",
     "ngx-owl-carousel-o": "^15.0.1",
